--- a/Web-Socket/Signlar/SignlarDemo/Views/Home/Index.cshtml
+++ b/Web-Socket/Signlar/SignlarDemo/Views/Home/Index.cshtml
@@ -5,11 +5,6 @@
     <div class="container">
         <div class="row">&nbsp;</div>
         <div class="row">
-            <div class="col-2">User</div>
-            <div class="col-4"><input type="text" id="userInput" /></div>
-            <div class="col-4">    <input type="button" class="btn btn-info" id="login" value="login" /></div>
-        </div>
-        <div class="row">
             <div class="col-2">toUser</div>
             <div class="col-4"><input type="text" id="toUserInput" /></div>
         </div>
@@ -38,23 +33,29 @@
 
 @section scripts{
     <script>
-        var connection;
-        document.getElementById("login").addEventListener("click", function () {
-            var loginName = document.getElementById("userInput").value;
+        var connection = initconnection();
+
+        document.getElementById("sendButton").addEventListener("click", function (event) {
+            var toUser = document.getElementById("toUserInput").value;
+            var message = document.getElementById("messageInput").value;
             $.ajax({
-                url: '/Home/Login',
+                url: '/api/User/SendMessage',
                 data: {
-                    loginName: loginName
+                    toUser: toUser,
+                    message: message
+                },
+                headers: {
+                    "Authorization": "Bearer " + localStorage.getItem("token")
                 },
                 contentType: "application/json",
-                success: function (token) {
-                    localStorage.setItem("token", token)
-                    connection = initconnection();
+                success: function (d) {
+                    console.log(d)
                 }
-            });
+            })
+            //connection.invoke("SendMessage", user, message).catch(function (err) {
+            //    return console.error(err.toString());
+            //});
             event.preventDefault();
         });
-
-
     </script>
 }
